feat: add new endpoint auth/update-profile and auth/update-password
