# src/controllers/auth.controller.ts
@@ -3,64 +3,73 @@ import response from "../utils/response";
 
 import * as yup from "yup";
 
-import UserModel from "../models/user.model";
+import UserModel, { userDTO, userLoginDTO, userUpdatePasswordDTO } from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../utils/interfaces";
 import { ROLES } from "../utils/constant";
 
-type TRegister = {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  confirmPassword: string;
-};
-
-
-type Tlogin = {
-    identifier: string;
-    password: string;
-};
-
-const registerValidateSchema = yup.object().shape({
-
-    fullName: yup.string().required(),
-    username: yup.string().required(),
-    email: yup.string().required(),
-    password: yup.string().required().min(6, "password must be at least 6 characters")
-    .test(
-    'at-least-one-uppercase-letter', 
-    "contains at least one uppercase letter", 
-    (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*[A-Z])/;
-        return regex.test(value);
-    }
-)    .test(
-    'at-least-one-number', 
-    "contains at least one uppercase letter", 
-    (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*\d)/;
-        return regex.test(value);
-    }
-),
-    confirmPassword: yup.string().required().oneOf([yup.ref('password'), ""], "Password must match") , 
-});
 
 export default {
+
+     async updateProfile(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { fullName, profilePicture } = req.body;
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          fullName,
+          profilePicture,
+        },
+        {
+          new: true,
+        }
+      );
+
+      if (!result) return response.notFound(res, "user not found");
+
+      response.success(res, result, "success to update profile");
+    } catch (error) {
+      response.error(res, error, "failed to update profile");
+    }
+  },
+  async updatePassword(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { oldPassword, password, confirmPassword } = req.body;
+
+      await userUpdatePasswordDTO.validate({
+        oldPassword,
+        password,
+        confirmPassword,
+      });
+
+      const user = await UserModel.findById(userId);
+
+      if (!user || user.password !== encrypt(oldPassword))
+        return response.notFound(res, "user not found");
+
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          password: encrypt(password),
+        },
+        {
+          new: true,
+        }
+      );
+      response.success(res, result, "success to update password");
+    } catch (error) {
+      response.error(res, error, "failed to update password");
+    }
+  },
+
     async register(req: Request, res: Response) {
-        const { fullName, username, email, password, confirmPassword } = req.body as TRegister;
-
-        /**
-         #swagger.tags = ['Auth']
-         */
-
-        req.body as unknown as TRegister;
+        const { fullName, username, email, password, confirmPassword } = req.body;
 
         try {
-        await registerValidateSchema.validate({
+        await userDTO.validate({
             fullName, 
             username, 
             email, 
@@ -87,19 +96,10 @@ export default {
     // funtion login
     async login(req: Request, res: Response) {
 
-        /**
-         #swagger.tags = ['Auth']
-         #swagger.requestBody = {
-            required: true,
-            schema: {$ref: "#/components/schemas/LoginRequest"}
-         }
-         */
-                    const {
-                        identifier,
-                        password
 
-                    } = req.body as unknown as Tlogin;
         try {
+            const {identifier, password} = req.body;
+            await userLoginDTO.validate({identifier, password,});
             //ambil data user bedasarkan identifier -> email dan username
             const userByIndentifier = await UserModel.findOne({ //untuk mengidentifikasi user melalui email/username
                 $or: [
@@ -138,13 +138,6 @@ export default {
 
   //disini irequser
    async me(req: IReqUser, res: Response){
-
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.security = [{
-        "bearerAuth": []
-     }]
-     */
         try {
 
             const user = req.user;
@@ -160,18 +153,6 @@ export default {
     },
 
     async activation(req: Request, res: Response) {
-/**
- #swagger.tags = ['Auth']
- #swagger.requestBody = {
-   required: true,
-   content: {
-     "application/json": {
-       schema: { $ref: "#/components/schemas/ActivationRequest" }
-     }
-   }
- }
- */
-
         try {
             const { code } = req.body as {code: string};
         
